# fractalizer

./: .gitmodules  CMakeLists.txt
res/: shader.fs
src/: main.c
tools/unix/: run.sh
